[package]
name = "matrix-report-mention-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
config = "0.15.14"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
matrix-sdk = { version = "0.13.0", features = ["markdown"] }
serde = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
url = "2.5.4"
